--- a/roles/filetree_create/templates/configure_connection_controller_credentials.yml.j2
+++ b/roles/filetree_create/templates/configure_connection_controller_credentials.yml.j2
@@ -1,8 +1,8 @@
 ---
 {%- raw %}
-controller_username: 'admin'
-controller_password: 'redhat00'
-controller_hostname: demo-ctr1-dev.bcnconsulting.com
-controller_validate_certs: false
+controller_username: 'ToDo'
+controller_password: 'ToDo'
+controller_hostname: "{{ groups[__template_groupvars_env][0] }}"
+controller_validate_certs: 'ToDo'
 {% endraw %}
 ...
