replace scm_url

--- a/roles/filetree_create/templates/controller_projects.j2
+++ b/roles/filetree_create/templates/controller_projects.j2
@@ -6,7 +6,7 @@ controller_projects:
     organization: "{{ orgs }}"
     scm_type: git
 {% endraw %}
-    scm_url:  "{{ gitlab_project_creation.project.ssh_url_to_repo }}"
+    scm_url:  "ToDo"
 {%- raw %}
     scm_credential: "{{ orgs }} {{ env }} Gitlab Credential"
     scm_branch: "{{ env }}"
