global configure_connection_controller_credentials.yml

--- a/roles/filetree_create/templates/configure_connection_controller_credentials.yml.j2
+++ b/roles/filetree_create/templates/configure_connection_controller_credentials.yml.j2
@@ -2,7 +2,7 @@
 {%- raw %}
 controller_username: 'ToDo'
 controller_password: 'ToDo'
-controller_hostname: "{{ groups[__template_groupvars_env][0] }}"
+controller_hostname: 'ToDo'
 controller_validate_certs: 'ToDo'
 {% endraw %}
 ...
