--- a/roles/filetree_create/templates/cd-gitlab-webhook-trigger.yml.j2
+++ b/roles/filetree_create/templates/cd-gitlab-webhook-trigger.yml.j2
@@ -1,22 +1,27 @@
 ---
 {%- raw %}
-- hosts: localhost
+- hosts: all
   connection: local
   gather_facts: false
   tasks:
     - name: "Get the modified files over the dirs from all the received commits"
       set_fact:
-        env: "{{ tower_webhook_payload.ref.split('/')[2] }}"
-        orgs: "{{ tower_webhook_payload.project.name }}"
-        list_of_dirs: "{{ ((tower_webhook_payload.commits | map(attribute='added') | list) +
-                           (tower_webhook_payload.commits | map(attribute='modified') | list) +
-                           (tower_webhook_payload.commits | map(attribute='removed') | list))
+        env: "{{ awx_webhook_payload.ref.split('/')[2] if awx_webhook_payload.ref.split('/')[1] == 'heads' else  awx_webhook_payload.project.default_branch }}"
+        gitlab_scm_branch: "{{ awx_webhook_payload.ref.split('/')[2] }}"
+        orgs: "{{ awx_webhook_payload.project.name }}"
+        list_of_dirs: "{{ ((awx_webhook_payload.commits | map(attribute='added') | list) +
+                           (awx_webhook_payload.commits | map(attribute='modified') | list) +
+                           (awx_webhook_payload.commits | map(attribute='removed') | list))
                        | flatten }}"
+    # https://regex101.com/r/0SgpFn/1
+    - set_fact:
+        regexpression: "/([^/]*)/env/(common|{{ env }})/controller_(.*).d/"
+
     - name: "Get the Organization and the tags to run the CasC"
       set_fact:
-        org_dirs_dict: "{{ (org_dirs_dict | default({})) | combine({input_var[0]: (((org_dirs_dict[input_var[0]] | default([])) + [input_var[1]] ) | unique ) }) }}"
+        org_dirs_dict: "{{ (org_dirs_dict | default({})) | combine({input_var[0]: (((org_dirs_dict[input_var[0]] | default([])) + [input_var[1]] + ( ['projects','schedules'] if awx_webhook_payload.ref.split('/')[1] == 'tags' else [''] ) ) | unique | reject('match', '^$') ) }) }}"
       vars:
-        input_var: "{{ item | regex_search('/([^/]*)/env/(?:[^/]*)/controller_(.*).d/', '\\1', '\\2') }}"
+        input_var: "{{ item | regex_search(regexpression, '\\1', '\\3') }}"
       loop: "{{ list_of_dirs }}"
       when: input_var | type_debug is match('list')
 
@@ -26,11 +31,13 @@
       vars:
         controller_launch_jobs:
           - name: "{{ org_tags.key }} CasC_JobTemplates_AAP_CD_Config_Controller"
+            scm_branch: "{{ gitlab_scm_branch }}"
             extra_vars:
               orgs: "{{ org_tags.key }}"
               dir_orgs_vars: 'orgs_vars'
               ansible_python_interpreter: "/usr/bin/python3"
               env: "{{ env }}"
+              gitlab_scm_branch: "{{ gitlab_scm_branch }}"
             tags: "{{ org_tags.value }}"
             wait: true
             verbosity: 0
