--- a/roles/filetree_create/templates/configure_connection_controller_credentials.yml.j2
+++ b/roles/filetree_create/templates/configure_connection_controller_credentials.yml.j2
@@ -1,8 +1,6 @@
 ---
-{%- raw %}
 controller_username: 'ToDo'
 controller_password: 'ToDo'
-controller_hostname: 'ToDo'
+controller_hostname: {% raw %}"{{ groups[' }}{% endraw %}{{ __template_groupvars_env }}{% raw %}'][0] }}"{% endraw %}
 controller_validate_certs: 'ToDo'
-{% endraw %}
 ...
