--- a/roles/filetree_create/templates/config-controller-filetree.yml.j2
+++ b/roles/filetree_create/templates/config-controller-filetree.yml.j2
@@ -1,43 +1,12 @@
 ---
 {%- raw %}
-- hosts: localhost
+- hosts: all
   connection: local
   gather_facts: false
-  #collections:
-  #  - ansible.controller
-  #  - redhat_cop.controller_configuration
   vars:
-    controller_configuration_projects_async_retries: 60
+    controller_configuration_projects_async_retries: 120
     controller_configuration_projects_async_delay: 2
-  pre_tasks:
-    - block:
-        - name: Populate users list from LDAP
-          set_fact:
-            ldap_users:
-              - ldap_user: ldap-user01
-                ldap_password: redhat00
-              - ldap_user: ldap-user02
-                ldap_password: redhat00
-              - ldap_user: ldap-admin01
-                ldap_password: redhat00
-              - ldap_user: ldap-admin02
-                ldap_password: redhat00
-              - ldap_user: ldap-cmdb01
-                ldap_password: redhat00
 
-        - name: Login Users from LDAP
-          uri:
-            url: "https://{{ controller_hostname }}/api/v2/me/"
-            user: "{{ item.ldap_user }}"
-            password: "{{ item.ldap_password }}"
-            method: GET
-            force_basic_auth: yes
-            status_code: 200
-            validate_certs: false
-          loop: "{{ ldap_users }}"
-          no_log: true
-      tags:
-        - always
   roles:
     - {role: redhat_cop.controller_configuration.filetree_read, assign_galaxy_credentials_to_org: false}
     - {role: redhat_cop.controller_configuration.dispatch, assign_galaxy_credentials_to_org: false}
