--- a/roles/filetree_create/templates/configure_connection_controller_credentials.yml.j2
+++ b/roles/filetree_create/templates/configure_connection_controller_credentials.yml.j2
@@ -1,7 +1,7 @@
 ---
-controller_username: 'ToDo'
-controller_password: 'ToDo'
-controller_hostname: {% raw %}"{{ groups['{% endraw %}{{ __template_groupvars_env }}{% raw %}'][0] }}"
+vault_controller_username: 'ToDo'
+vault_controller_password: 'ToDo'
+vault_controller_hostname: {% raw %}"{{ groups['{% endraw %}{{ __template_groupvars_env }}{% raw %}'][0] }}"
 {% endraw %}
-controller_validate_certs: 'ToDo'
+vault_controller_validate_certs: 'ToDo'
 ...
