add ansible.cfg gitignore

--- a/roles/filetree_create/templates/gitignore.j2
+++ b/roles/filetree_create/templates/gitignore.j2
@@ -1,4 +1,5 @@
 collections/ansible_collections
+ansible.cfg
 .*.swp
 .vault_pass.txt
 configs
@@ -6,4 +7,3 @@ controller_settings_ldap1.yml
 play_desired_state
 roles_old
 ansible.cfg.ori
-
