--- a/roles/filetree_create/templates/gitlab_webhook.yml.j2
+++ b/roles/filetree_create/templates/gitlab_webhook.yml.j2
@@ -18,7 +18,7 @@
     gitlab_action_push: true
     gitlab_action_tag: false
     gitlab_branch_filter: dev-casc
-    workflow_job_template_name: "gitlab_project CasC_AAP_Workflow"
+    workflow_job_template_name: "{{ gitlab_project }} CasC_AAP_Workflow"
 
   tasks:
     - name: GitLab Webhook
