--- a/roles/filetree_create/templates/configure_connection_controller_credentials.yml.j2
+++ b/roles/filetree_create/templates/configure_connection_controller_credentials.yml.j2
@@ -3,5 +3,5 @@ vault_controller_username: 'ToDo'
 vault_controller_password: 'ToDo'
 vault_controller_hostname: {% raw %}"{{ groups['{% endraw %}{{ __template_groupvars_env }}{% raw %}'][0] }}"
 {% endraw %}
-vault_controller_validate_certs: 'ToDo'
+vault_controller_validate_certs: true
 ...
