--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -1,15 +1,39 @@
 ---
 controller_credentials:
 {%- raw %}
+  - name: "{{orgs  }} {{ env }} Automation Hub Community Repository"
+    description: ""
+    credential_type: "Ansible Galaxy/Automation Hub API Token"
+    organization: "{{ orgs }}"
+    inputs:
+      url: "https://{{ automation_hub }}/api/galaxy/content/community/"
+      token: "Hub - Token"
+
+  - name: "{{ orgs }} {{ env }} Automation Hub Published Repository"
+    description: ""
+    credential_type: "Ansible Galaxy/Automation Hub API Token"
+    organization: "{{ orgs }}"
+    inputs:
+      url: "https://{{ automation_hub }}/api/galaxy/content/published/"
+      token: "Hub - Token"
+
+  - name: "{{ orgs }} {{ env }} Automation Hub RH Certified Repository"
+    description: ""
+    credential_type: "Ansible Galaxy/Automation Hub API Token"
+    organization: "{{ orgs }}"
+    inputs:
+      url: "https://{{ automation_hub }}/api/galaxy/content/rh-certified/"
+      token: "Hub - Token"
+
   - name: "{{ orgs }} {{ env }} AAP Credentials"
     description: "{ orgs }} {{ env }} Ansible Automation Platform Credentials"
     credential_type: "Red Hat Ansible Automation Platform"
     organization: "{{ orgs }}"
     inputs:
-      host: "controller.lab.example.com"
-      username: "controller-user"
-      password: "controller-password"
-      verify_ssl: false
+      host: "{{ controller_hostname }}"
+      username: "{{ controller_username }}"
+      password: "{{ controller_password }}"
+      verify_ssl: "{{ controller_validate_certs }}"
 
   - name: "{{ orgs }} {{ env }} Vault Credentials"
     description: "{{ orgs }} {{ env }} Vault Credentials"
@@ -27,16 +51,6 @@ controller_credentials:
       ssh_key_data: |
         -----BEGIN OPENSSH PRIVATE KEY-----
         e+hmzrLh33NWOQy98knTvNZaXM+1xy6qHLTDqUA8BlueNKfMKcz39IfONO/6ZVxiDYLWxb
-        9bl01ssxyNM+0AAAAnYW5zaWJsZUBkZW1vLWN0cjEtZGV2LmJjbmNvbnN1bHRpbmcuY29t
-        AQIDBA==
         -----END OPENSSH PRIVATE KEY-----
-
-  - name: "{{ orgs }} {{ env }} Machine Credentials"
-    description: "{{ orgs }} {{ env }} Machine Credentials"
-    credential_type: "Machine"
-    organization: "{{ orgs }}"
-    inputs:
-      username: "ansible"
-      password: "password"
 {% endraw %}
 ...
