--- a/roles/filetree_create/templates/controller_credentials.j2
+++ b/roles/filetree_create/templates/controller_credentials.j2
@@ -6,7 +6,9 @@ controller_credentials:
     credential_type: "Ansible Galaxy/Automation Hub API Token"
     organization: "{{ orgs }}"
     inputs:
+{% endraw %}
       url: "https://{{ automation_hub }}/api/galaxy/content/community/"
+{%- raw %}
       token: "Hub - Token"
 
   - name: "{{ orgs }} {{ env }} Automation Hub Published Repository"
@@ -14,7 +16,9 @@ controller_credentials:
     credential_type: "Ansible Galaxy/Automation Hub API Token"
     organization: "{{ orgs }}"
     inputs:
+{% endraw %}
       url: "https://{{ automation_hub }}/api/galaxy/content/published/"
+{%- raw %}
       token: "Hub - Token"
 
   - name: "{{ orgs }} {{ env }} Automation Hub RH Certified Repository"
@@ -22,7 +26,9 @@ controller_credentials:
     credential_type: "Ansible Galaxy/Automation Hub API Token"
     organization: "{{ orgs }}"
     inputs:
+{% endraw %}
       url: "https://{{ automation_hub }}/api/galaxy/content/rh-certified/"
+{%- raw %}
       token: "Hub - Token"
 
   - name: "{{ orgs }} {{ env }} AAP Credentials"
