--- a/roles/filetree_create/templates/gitignore.j2
+++ b/roles/filetree_create/templates/gitignore.j2
@@ -2,7 +2,10 @@ collections/*
 roles
 ansible.cfg
 .*.swp
+.vault_password
 .vault_pass.txt
+config-controller-filetree-artifact*
+ansible-navigator.log
 configs
 controller_settings_ldap1.yml
 play_desired_state
